--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -11,6 +11,7 @@
 @import "pages/dashboard";
 
 @import "components/categories";
+@import "components/card";
 @import "components/catalog";
 @import "components/breadcrumbs";
 @import "components/card_list";
